# cpp-project-template

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Doxyfile  README.md
.github/workflows/: ci.yaml
scripts/: build.sh  install.sh
src/: main.cpp
